[package]
name = "stack"
version = "1.12.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opener = "0.6.1"
rand = "0.8"
regex = "0.1"
reqwest = { version = "0.11.0", features = ["blocking"] }
rodio = "0.17.3"
sys-info = "0.7.0"
clap = "3.0"
clearscreen = "2.0.1"